*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

1.9.9 (2012-08-??)
 ! Bugfix in PNGW calibration (patch by allib)
 ! RMAPS: Error "failed to retrieve max tile zoom info" fixed (#3561323)
 ~ GEMF: Error "NullPointerException" fixed (#3564146)

1.9.8 (2012-07-05)
 ! Viewranger atlas format depends on Java Advanced Imaging without checking
 ! OurxMaps SQLite: Memory handling changed (should prevent OutOfMemoryError)
 ! Fixed progress bar in atlas progress window for large atlases 
 + Possibility added to use SQLite Java Wrapper (ch-werner) instead of default 
    sqlite library 
 ~ Replaced the old SQLite library with recent version of Xerial. This fixes 
    all problems creating databases larger than 2GB on Windows 64bit
 ! CacheWolf: Custom tile processing re-enabled
 + New atlas format: iPhone 3 Map Tiles v5

1.9.7 (2012-05-16)
 + Custom XML map source: New parameter {$q} for Quad-Tree encoded zoom, x & y
 + New atlas output format: Osmdroid GEMF
 + Increased default map size to 65536

1.9.6 (2012-04-02)
 + New settings.xml option: <garminCustomMaxMapCount>
 + New atlas format: TomTom raster
 - Map source removed: Openstreetmap Osmarenderer (project has been retired)
 ! Paper atlas: Disabling compass in settings was ineffective 
 + New map source: OpenStreetMap 4uMaps.eu (Europe)
 + backgroundColor option for customMultiLayerMapSource
 ! Message "The JPEG image format is not supported by OpenJDK." was shown at
    start-up even is custom tiles processing was disabled
 + New atlas format: Viewranger
 ~ Magellan (RMP): Removed 18000 pixel check

1.9.5 (2012-03-09)
 ! Alpine Quest Map: Multiple bugs fixed (#3484328)
 ~ Improvements in atlas download progress dialog (patch by dvodvo)
 ~ Windows launcher "Mobile Atlas Creator.exe" increased max heap size to 1GB